<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">ForPDA</string>
    <string name="app_description">Неофициальный клиент для сайта 4pda.ru</string>
    <string name="search_keyword">Ключевое слово</string>
    <string name="ClaimDescription">Вам не нужно указывать здесь тему и сообщение,
        модератор автоматически получит эту информацию.

        Пожалуйста, используйте эту возможность форума только для жалоб о некорректном сообщении!
        Для связи с модератором используйте личные сообщения.
    </string>
    <string name="EditReason">Причина редактирования</string>
    <string name="Share">Поделиться ссылкой</string>
    <string name="LoadMore">Загрузить еще</string>
    <string name="UserNameLogin">Имя пользователя (login)</string>
    <string name="Password">Пароль</string>
    <string name="Stealth">Скрытность</string>
    <string name="Comment_">Комментарий</string>
    <string name="EnterSubject_">Введите тему…</string>
    <string name="EnterMessage_">Введите сообщение…</string>
    <string name="Whom">Кому</string>
    <string name="User__">Пользователь: </string>
    <string name="EditReason__">Причина изменения</string>
    <string name="Search">Искать</string>
    <string name="SortBy">Сортировка</string>
    <string name="Subforums">Искать в подфорумах?</string>
    <string name="PageNumber">Номер страницы</string>
    <string name="Send">Отправить</string>
    <string name="Connecting">Подключение</string>
    <string name="Downloading">Загрузка</string>
    <string name="DownloadingComplete">Загрузка завершена</string>
    <string name="DownloadingCanceled">Загрузка отменена</string>
    <string name="UnknownError">Неизвестная ошибка</string>
    <string name="DownloadError">Ошибка загрузки</string>
    <string name="Unknown">Неизвестно</string>
    <string name="InsertNick">Вставить ник</string>
    <string name="MessagesQms">Сообщения (QMS)</string>
    <string name="Profile">Профиль</string>
    <string name="FindUserTopics">Темы пользователя</string>
    <string name="FindUserPosts">Сообщения пользователя</string>
    <string name="FindUserPostsInTopic">Сообщения в этой теме</string>
    <string name="SelectAnAction">Выберите действие</string>
    <string name="OpenWith">Открыть с</string>
    <string name="NewDialog">Новый диалог</string>
    <string name="AllDialogs">Все диалоги</string>
    <string name="Change">Изменить</string>
    <string name="ChangeReputationRequest">Запрос на изменение репутации отправлен</string>
    <string name="ChangeReputationError">Ошибка изменения репутации</string>
    <string name="Reputation">Репутация</string>
    <string name="Logout">Выход</string>
    <string name="Login">Вход</string>
    <string name="Registration">Регистрация</string>
    <string name="SendBy_">Отправить через…</string>
    <string name="Loading_">Загрузка…</string>
    <string name="Canceled">Отменено</string>
    <string name="Error">Ошибка</string>
    <string name="DownloadComplete">Загрузка завершена</string>
    <string name="NewNote">Новая заметка</string>
    <string name="Save">Сохранить</string>
    <string name="NoteSaved">Заметка сохранена</string>
    <string name="Choice">Выбор</string>
    <string name="DonateAccountNimberCopied">Номер счёта скопирован в буфер обмена</string>
    <string name="DonatePurseCopied">Номер кошелька скопирован в буфер обмена</string>
    <string name="ConfirmTheAction">Подтвердите действие</string>
    <string name="Delete">Удалить</string>
    <string name="SureDeleteFile">Вы действительно хотите удалить файл?</string>
    <string name="CookiesFileNotFound">Файл cookies не найден</string>
    <string name="CookiesFileDeleted">Файл cookies удален</string>
    <string name="FailedDeleteCookies">Не удалось удалить файл cookies</string>
    <string name="ChangesHistory">История изменений</string>
    <string name="Recomend">Рекомендую установить программу 4pda</string>
    <string name="RecommendText">Привет, я использую 4pda, это первый android-клиент для лучшего
        сайта о мобильных устройствах 4PDA 4pda.ru
    </string>
    <string name="NeedToLogin">Необходимо авторизироваться!</string>
    <string name="RaiseReputation">Поднять репутацию</string>
    <string name="FailedToCreateFolderInPath">Не удалось создать папку по указанному пути</string>
    <string name="FailedToCreateFileInPath">Не удалось создать файл по указанному пути</string>
    <string name="AcceptStyle">Применить</string>
    <string name="ChooseStyle">Выберите стиль</string>
    <string name="Information">Информация</string>
    <string name="StyleDoesNotContainDesc">Стиль не содержит описания</string>
    <string name="OpenLinkInBrowser">Открыть ссылку в браузере?</string>
    <string name="Open">Открыть</string>
    <string name="DownloadAborted">Загрузка прервана</string>
    <string name="DownloadFile">Скачивание файла</string>
    <string name="navigate_getfirstpost">К первому</string>
    <string name="navigate_getlastpost">К последнему</string>
    <string name="navigate_getnewpost">К первому непрочитанному</string>
    <string name="navigate_last_url">К последней ссылке в клиенте</string>
    <string name="AddToFavorites">Добавить в избранное</string>
    <string name="DeletingFromFavorites">Удаление из избранного</string>
    <string name="DeleteFromFavorites">Удалить из избранного</string>
    <string name="OpenTopicForum">Открыть форум темы</string>
    <string name="NotesByTopic">Заметки по теме</string>
    <string name="Settings">Настройки</string>
    <string name="Refresh">Обновить</string>
    <string name="CloseApp">Закрыть программу</string>
    <string name="guest">гость</string>
    <string name="Attaches">Вложения</string>
    <string name="FindOnPage">Найти на странице</string>
    <string name="FindInTopic">Найти в этой теме</string>
    <string name="Browser">Браузер</string>
    <string name="LoadImages">Загружать изображения</string>
    <string name="Close">Закрыть</string>
    <string name="LeaveComment">Оставить комментарий</string>
    <string name="Like">Понравилось</string>
    <string name="crash_toast_text">>Ooooops! Ошибка приложения!</string>
    <string name="crash_dialog_text">Произошла непредвиденная ошибка, остановившая приложение. Пожалуйста помогите исправить её, отправив данные об ошибке (необходимо приложение для отправки e-mail)</string>
    <string name="crash_dialog_title">Приложение остановлено</string>
    <string name="crash_dialog_comment_prompt">Вы можете добавить свой комментарий:</string>
    <string name="crash_dialog_ok_toast">Спасибо!</string>
    <string name="theme">Тема</string>
    <string name="entered_text">Имеется введенный текст сообщения! Закрыть тему?</string>
    <string name="apply_yes">Да</string>
    <string name="apply_no">Нет</string>
    <string name="apply_cancel">Отменить</string>
    <string name="forum_msg">Сообщение форума</string>
    <string name="who_read_topic">Кто читает тему</string>
    <string name="who_posted_msg">Кто писал сообщения</string>
    <string name="link">Ссылка</string>
    <string name="new_post">Написать</string>
    <string name="attachments_page">Вложения текущей страницы</string>
    <string name="all_attachments_topic">Все вложения топика</string>
    <string name="apply_options">Опции</string>
    <string name="theme_view">Вид</string>
    <string name="avatars">Аватары (%s)</string>
    <string name="show_avatars">Показывать аватары</string>
    <string name="show_avatars_a">Показывать аватары (%s)</string>
    <string name="hide_pencil">Скрывать карандаш</string>
    <string name="hide_arrows">Скрыть стрелки</string>
    <string name="loading_img_for_session">Загр-ть изобр-я (для сессии)</string>
    <string name="font_size">Размер шрифта</string>
    <string name="theme_style">Стиль</string>
    <string name="multi_moderation">Мультимодерация</string>
    <string name="quote_post">Цитата сообщения</string>
    <string name="blank_quote">Пустая цитата</string>
    <string name="quote_from_buffer">Цитата буфера</string>
    <string name="quote_editor">Редактор цитаты</string>
    <string name="quote">Цитата</string>
    <string name="url_post">Ссылка на сообщение</string>
    <string name="report_msg">Жалоба на сообщение</string>
    <string name="edit_post">Изменить сообщение</string>
    <string name="delete_post">Удалить сообщение</string>
    <string name="create_note">Сделать заметку</string>
    <string name="select_action">Выберите действие</string>
    <string name="refresh_page">Обновить страницу?</string>
    <string name="refresh_p">Обновить</string>
    <string name="blank_url">Пустой url</string>
    <string name="want_to_delete_msg">Вы действительно хотите удалить это сообщение?</string>
    <string name="delete_m">Удалить</string>
    <string name="deleting_msg">Удаление сообщения…</string>
    <string name="theme_option">Опции темы</string>
    <string name="no">Нет</string>
    <string name="ask">Спрашивать</string>
    <string name="default_action">Действие по умолчанию</string>
    <string name="assign_default">Назначить по умолчанию?</string>
    <string name="yes">Да</string>
    <string name="only_now">Только сейчас</string>
    <string name="hint">Подсказка</string>
    <string name="ok">OK</string>
    <string name="error">Ошибка</string>
    <string name="check_connection">Проверьте соединение</string>
    <string name="repeat">Повторить</string>
    <string name="associate_with_theme">Связать с темой на форуме</string>
    <string name="enter_url_theme">Введите URL темы</string>
    <string name="empty_url">Пустой URL!</string>
    <string name="incorrect_url">Неверный URL!</string>
    <string name="refresh">Обновить</string>
    <string name="loading">Загрузка</string>
    <string name="no_data">Нет данных</string>
    <string name="cache_load_error">Ошибка загрузки кешированного списка</string>
    <string name="bbcodes_and_smiles">BB-коды и смайлы</string>
    <string name="bbcodes">BB-коды</string>
    <string name="spoiler_title">Название спойлера</string>
    <string name="cancel">Отмена</string>
    <string name="enter_full_address">Пожалуйста, введите полный URL адрес</string>
    <string name="enter_title">Пожалуйста, введите заголовок</string>
    <string name="visit_my_homepage">Посетить мою домашнюю страницу</string>
    <string name="enter_content_n_item">Введите содержание %d пункта списка</string>
    <string name="select_text_size">Выберите размер текста</string>
    <string name="select_list">Выберите список</string>
    <string name="complaint_sent">Жалоба отправлена</string>
    <string name="receiving_data">Получение данных…</string>
    <string name="login">Вход</string>
    <string name="bad_logout">Неудачный выход</string>
    <string name="processing_data">Обработка данных…</string>
    <string name="reviews">Отзывы</string>
    <string name="loading_canceled_by_user">Загрузка отменена пользователем</string>
    <string name="write">Написать</string>
    <string name="setting">Настройка</string>
    <string name="no_selected_posts">Не выбрано ни одного сообщения</string>
    <string name="perform">Выполнить</string>
    <string name="catalog">Каталог</string>
    <string name="warning">Предупреждение</string>
    <string name="delete">Удалить</string>
    <string name="close">Закрыть</string>
    <string name="discussions">Обсуждения</string>
    <string name="confirm_action">Подтвердите действие</string>
    <string name="text_not_empty">Имеется введенный текст сообщения! Закрыть?</string>
    <string name="comment">Комментировать</string>
    <string name="settings">Настройки</string>
    <string name="reputation">Репутация</string>
    <string name="topics">Темы</string>
    <string name="posts">Сообщения</string>
    <string name="profile_interlocutor">Профиль собеседника</string>
</resources>